--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mysmallcharity</title>
-	<%= stylesheet_link_tag :all %>
-	<%= javascript_include_tag :defaults %>
+	<title><%= title %></title>
 	<%= csrf_meta_tag %>
-	<%= active_scaffold_includes %>
-	<link rel="stylesheet" href="stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="stylesheets/blueprint/print.css" type="text/css" media="print">
-	<!--[if lt IE 8]>
-		<link rel="stylesheet" href="stylesheets/blueprint/ie.css" type="text/css" media="screen, projection">
-	<![endif]-->
+	<%= render 'layouts/stylesheets' %>
+
 </head>
 <body>
 
-	<%= yield %>
+	<div class="container">
+		<%= render 'layouts/header' %>
 
+		<%= yield %>
+		
+		<%= render 'layouts/footer' %>
+	</div>
+	
 </body>
 </html>
