--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,4 +5,5 @@
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
+  <%= debug(params) if Rails.env.development? %>
 </footer>
